--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+spring.data.mongodb.uri      = mongodb+srv://alexer1515:Mongo_12355@cluster0.hewn9s2.mongodb.net/DB_EPA
+spring.data.mongodb.database = DB_EPA
 
+server.port                  = 8085
