--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.data.mongodb.uri      = mongodb+srv://alexer1515:Mongo_12355@cluster0.hew
 spring.data.mongodb.database = DB_EPA
 
 server.port                  = 8085
+
+EPA.Server.Desarrollo=http://localhost:8085
